2009-01-12  Douglas Bates <bates@stat.wisc.edu>

	* [r2313] R/sparseMatrix.R, man/sparseMatrix.rd: Use intermediate
	triplet rep in sparseMatrix.

2009-01-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (sparseMatrix): new function to be used in
	place of new(), notably for CsparseMatrix objects.
	* man/sparseMatrix.Rd: its doc; plus examples

	* man/CsparseMatrix-class.Rd: fix long-standing thinko; update the
	\note{} to reflect the fact that the validity method no longer
	modifies its argument.

	* R/Csparse.R (.validateCsparse): new utility accessing
	* src/Csparse.c (Csparse_validate_, Csparse_validate2): new
	utilities allowing the "sort-in-place" that used to be part of
	former Csparse_validate().

2008-12-10  Douglas Bates <bates@stat.wisc.edu>

	* [r2309] DESCRIPTION: Release 0.99375-17

2008-12-05  Douglas Bates <bates@stat.wisc.edu>

	* [r2308] inst/include/Matrix_stubs.c, inst/include/cholmod.h: Adding
	  const for picky compilers; Using CHM_FR typedef

2008-11-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* [r2307] ChangeLog, tests/validObj.R: update (as of Oct.26)

2008-10-31  Douglas Bates <bates@stat.wisc.edu>

	* [r2306] inst/include/Matrix_stubs.c: Consistency with cholmod.h re
	  const qualifier

2008-10-26  Douglas Bates <bates@stat.wisc.edu>

	* src/Csparse.c (Csparse_validate): do not sort, but report error
	on unsorted row-indices within column.

	* tests/validObj.R: adapt the regression test.

2008-10-17  Douglas Bates <bates@stat.wisc.edu>

	* [r2300] inst/include/Matrix_stubs.c: Consistency with SparseSuite names
	* [r2299] src/AMD/Source/Makefile, src/CHMfactor.c,
	  src/CHOLMOD/Lib/Makefile, src/COLAMD/Source/Makefile, src/Csparse.c,
	  src/Tsparse.c, src/UFconfig/UFconfig.h, src/chm_common.c,
	  src/chm_common.h, src/dense.c, src/dgCMatrix.c, src/dsCMatrix.c,
	  src/init.c, src/t_gCMatrix_colSums.c: Compile only the UF_long version
	  of SparseSuite but setting UF_long to be int
