@@ -1,3 +1,11 @@
+2009-01-17  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/sparseMatrix.R (sparseMatrix): recycle 'x' if necessary;
+	use 'index1' rather than 'index0' {as proposed by Doug}.
+
+	* R/dgeMatrix.R: drop two unnecessary (maybe very very slightly
+	faster) methods for %*%.
+
 2009-01-12  Douglas Bates <bates@stat.wisc.edu>
 
 	* [r2313] R/sparseMatrix.R, man/sparseMatrix.rd: Use intermediate
